esp32/esp_device_driver/build/log/idf_py_stdout_output_16700
Command: ninja all
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/ziad/Ziad_WS/Embedded_IoT/esp32/esp_device_driver/build/bootloader/esp-idf/esptool_py && /home/ziad/.espressif/python_env/idf5.5_py3.10_env/bin/python /home/ziad/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ziad/Ziad_WS/Embedded_IoT/esp32/esp_device_driver/build/bootloader/bootloader.bin
Bootloader binary size 0x6600 bytes. 0xa00 bytes (9%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building CXX object esp-idf/WiFi/CMakeFiles/__idf_WiFi.dir/WiFi.cpp.obj
FAILED: esp-idf/WiFi/CMakeFiles/__idf_WiFi.dir/WiFi.cpp.obj 
/home/ziad/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"c5865270\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/ziad/Ziad_WS/Embedded_IoT/esp32/esp_device_driver/build/config -I/home/ziad/Ziad_WS/Embedded_IoT/esp32/esp_device_driver/application/WiFi -I/home/ziad/esp-idf/components/newlib/platform_include -I/home/ziad/esp-idf/components/freertos/config/include -I/home/ziad/esp-idf/components/freertos/config/include/freertos -I/home/ziad/esp-idf/components/freertos/config/xtensa/include -I/home/ziad/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ziad/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ziad/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/ziad/esp-idf/components/freertos/esp_additions/include -I/home/ziad/esp-idf/components/esp_hw_support/include -I/home/ziad/esp-idf/components/esp_hw_support/include/soc -I/home/ziad/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/ziad/esp-idf/components/esp_hw_support/dma/include -I/home/ziad/esp-idf/components/esp_hw_support/ldo/include -I/home/ziad/esp-idf/components/esp_hw_support/debug_probe/include -I/home/ziad/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/ziad/esp-idf/components/esp_hw_support/power_supply/include -I/home/ziad/esp-idf/components/esp_hw_support/port/esp32/. -I/home/ziad/esp-idf/components/esp_hw_support/port/esp32/include -I/home/ziad/esp-idf/components/heap/include -I/home/ziad/esp-idf/components/heap/tlsf -I/home/ziad/esp-idf/components/log/include -I/home/ziad/esp-idf/components/soc/include -I/home/ziad/esp-idf/components/soc/esp32 -I/home/ziad/esp-idf/components/soc/esp32/include -I/home/ziad/esp-idf/components/soc/esp32/register -I/home/ziad/esp-idf/components/hal/platform_port/include -I/home/ziad/esp-idf/components/hal/esp32/include -I/home/ziad/esp-idf/components/hal/include -I/home/ziad/esp-idf/components/esp_rom/include -I/home/ziad/esp-idf/components/esp_rom/esp32/include -I/home/ziad/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/ziad/esp-idf/components/esp_rom/esp32 -I/home/ziad/esp-idf/components/esp_common/include -I/home/ziad/esp-idf/components/esp_system/include -I/home/ziad/esp-idf/components/esp_system/port/soc -I/home/ziad/esp-idf/components/esp_system/port/include/private -I/home/ziad/esp-idf/components/xtensa/esp32/include -I/home/ziad/esp-idf/components/xtensa/include -I/home/ziad/esp-idf/components/xtensa/deprecated_include -I/home/ziad/esp-idf/components/lwip/include -I/home/ziad/esp-idf/components/lwip/include/apps -I/home/ziad/esp-idf/components/lwip/include/apps/sntp -I/home/ziad/esp-idf/components/lwip/lwip/src/include -I/home/ziad/esp-idf/components/lwip/port/include -I/home/ziad/esp-idf/components/lwip/port/freertos/include -I/home/ziad/esp-idf/components/lwip/port/esp32xx/include -I/home/ziad/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ziad/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/ziad/esp-idf/components/esp_wifi/include -I/home/ziad/esp-idf/components/esp_wifi/include/local -I/home/ziad/esp-idf/components/esp_wifi/wifi_apps/include -I/home/ziad/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/ziad/esp-idf/components/esp_event/include -I/home/ziad/esp-idf/components/esp_phy/include -I/home/ziad/esp-idf/components/esp_phy/esp32/include -I/home/ziad/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -std=gnu++17 -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/ziad/Ziad_WS/Embedded_IoT/esp32/esp_device_driver=. -fmacro-prefix-map=/home/ziad/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/WiFi/CMakeFiles/__idf_WiFi.dir/WiFi.cpp.obj -MF esp-idf/WiFi/CMakeFiles/__idf_WiFi.dir/WiFi.cpp.obj.d -o esp-idf/WiFi/CMakeFiles/__idf_WiFi.dir/WiFi.cpp.obj -c /home/ziad/Ziad_WS/Embedded_IoT/esp32/esp_device_driver/application/WiFi/WiFi.cpp
/home/ziad/Ziad_WS/Embedded_IoT/esp32/esp_device_driver/application/WiFi/WiFi.cpp: In member function 'esp_err_t WiFi::WiFi::_get_mac()':
/home/ziad/Ziad_WS/Embedded_IoT/esp32/esp_device_driver/application/WiFi/WiFi.cpp:19:84: error: expected ')' before 'mac_byte_buffer'
   19 |         snprintf(mac_add_cstr, sizeof(mac_add_cstr), "%02X%02X%02X%02X%02X%02X%02X"
      |                 ~                                                                  ^
      |                                                                                    )
   20 |         mac_byte_buffer[0],
      |         ~~~~~~~~~~~~~~~                                                             
/home/ziad/Ziad_WS/Embedded_IoT/esp32/esp_device_driver/application/WiFi/WiFi.cpp:19:82: error: format '%X' expects a matching 'unsigned int' argument [-Werror=format=]
   19 |         snprintf(mac_add_cstr, sizeof(mac_add_cstr), "%02X%02X%02X%02X%02X%02X%02X"
      |                                                                               ~~~^
      |                                                                                  |
      |                                                                                  unsigned int
cc1plus: some warnings being treated as errors
ninja: build stopped: subcommand failed.
